# mJackets-test2

./: CMakeLists.txt  main.cpp
bsp/: CMakeLists.txt  PinDefs.hpp  stm32f7xx_hal_conf.h
bsp/inc/: PinDefs.hpp  stm32f4xx_hal_conf.h
bsp/src/: startup_stm32f769xx.s
